chore: update to ghostty 1.2

--- a/home/dot_config/exact_ghostty/config
+++ b/home/dot_config/exact_ghostty/config
@@ -9,7 +9,7 @@ adjust-underline-position = 4
 mouse-hide-while-typing = true
 
 # theme
-theme = catppuccin-mocha
+theme = Catppuccin Mocha
 cursor-style = bar
 cursor-invert-fg-bg = true
 cursor-style-blink = false
