chore: adjust vtsls config and add initial zed configuration

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -55,6 +55,9 @@ README.md
 # Karabiner automatic backups
 .config/karabiner/automatic_backups
 
+# Zed prompts
+.config/zed/prompts
+
 # Ignore MacOS files
 .CFUserTextEncoding
 .DS_Store
