chore: fix tmux config typos

--- a/home/dot_config/exact_tmux/dot_tmux.conf
+++ b/home/dot_config/exact_tmux/dot_tmux.conf
@@ -17,7 +17,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -gq allow-passthrough on
 set -g visual-activity off
 set -g detach-on-destroy off
-set -g status-position top 
+set -g status-position top
 
 set -g mouse on
 
@@ -60,7 +60,7 @@ set -g focus-events on
 setw -g aggressive-resize on
 
 # numToStr/Navigator.nvim integration
-version_pat='s/^tmux[^0-9]*([.0-9]+).*/\1/p'
+version_path='s/^tmux[^0-9]*([.0-9]+).*/\1/p'
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -68,7 +68,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
-tmux_version="$(tmux -V | sed -En "$version_pat")"
+tmux_version="$(tmux -V | sed -En "$version_path")"
 setenv -g tmux_version "$tmux_version"
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
