chore(aerospace): add orion browser to the workspace b

--- a/home/.chezmoidata/aerospace_apps.yml
+++ b/home/.chezmoidata/aerospace_apps.yml
@@ -6,6 +6,7 @@ aerospace_apps:
     - 'com.apple.Safari'
     - 'org.mozilla.com.zen.browser'
     - 'com.duckduckgo.macos.browser'
+    - 'com.kagi.kagimacOS'
   workspace_d:
     - 'com.figma.Desktop'
   workspace_m:
