chore: add clock to floating apps

--- a/home/.chezmoidata/aerospace_apps.yml
+++ b/home/.chezmoidata/aerospace_apps.yml
@@ -25,6 +25,7 @@ aerospace_apps:
     - 'com.apple.systempreferences'
     - 'com.apple.ActivityMonitor'
     - 'com.apple.AppStore'
+    - 'com.apple.clock'
     - 'com.apple.MobileSMS'
     - 'com.apple.Music'
     - 'com.apple.podcasts'
